@@ -1,3 +1,9 @@
+>> 12.03.2012
+[CO]
+- Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid
+
+
+
 >> 03.03.2012
 [CO]
 - "Color3" & "Color4": Added missing constructor taking a string
